--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,55 +4,204 @@
 *::after,
 *::before {
     box-sizing: border-box;
+    margin: 0;
 }
+
 $top-color: #F17252;
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
 
-.container{
+h2 {
+    font-family: Poppins;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: -1.8px;
+}
+
+.container {
     max-width: 1274px;
     margin: 0 auto;
     padding: 0 5px;
 }
-// MAIN SECTION
-.header__top{
-    display: flex;
-    justify-content: space-between;
-    background-color: #FFF;
 
-    &-item{
-        display: flex;
-    }
-    li{
-        display: inline-block;
-        font-family: Inter;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%;
-        color: var(--neutral-60, #757B8A);
-        margin-right: 32px;
-        &:hover{
-            font-weight: 700;
-            color: var(--neutral-100, #101010);
-        }
-        &:last-child{
-            margin-right: 0;
-        }
-    }
-}
-.header__body{
+// MAIN SECTION
+.header {
     background-image: url(../images/mani__bg.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center bottom;
+
+    &__top {
+        display: flex;
+        justify-content: space-between;
+        margin: 20px 0 76px;
+
+        &-item {
+            display: flex;
+            align-items: center;
+
+            ul {
+                margin-left: 65px;
+            }
+
+            li {
+                color: #757B8A;
+                display: inline-block;
+                margin-right: 32px;
+                font-family: Inter;
+                font-size: 16px;
+                font-weight: 400;
+                line-height: 150%;
+            }
+
+            li:hover {
+                font-weight: 700;
+                color: #101010;
+                transform: all .3s;
+            }
+
+            li:last-child {
+                margin-right: 0;
+            }
+        }
+
+        &-btn {
+            color: #FFF;
+            text-align: center;
+            font-family: Inter;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 150%;
+            background-color: $top-color;
+            border-radius: 80px;
+            padding: 16px 32px;
+        }
+    }
+
+    &__body {
+        text-align: center;
+
+        span {
+            color: #0F3141;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 30px;
+            letter-spacing: 0.18px;
+            text-transform: uppercase;
+        }
+
+        h1 {
+            color: #000;
+            font-family: Poppins;
+            font-size: 88px;
+            font-weight: 600;
+            line-height: 94px;
+            letter-spacing: -2.64px;
+            width: 911px;
+            text-align: center;
+            margin: 12px auto 41px;
+        }
+
+        button {
+            color: #FFF;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: -0.18px;
+            background-color: transparent;
+            border: none;
+            margin-right: 16px;
+            cursor: pointer;
+        }
+
+        &-btn {
+            display: inline-flex;
+            padding: 12px 16px;
+            justify-content: center;
+            width: 258px;
+            background-color: $top-color;
+            margin: auto;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    }
 }
+
 // /MAIN SECTION
+
+
+// SERVICES SECTION
+.services {
+    background-color: #FAF8F4;
+    padding-top: 113px;
+    padding-bottom: 134px;
+    padding-left: 24px;
+    background-image: url(../images/services-ellipse.png);
+    background-repeat: no-repeat;
+    background-position: center;
+
+    h2 {
+        margin-bottom: 60px;
+    }
+
+    &__items {
+        display: flex;
+        justify-content: space-between;
+
+        svg {
+            margin-bottom: 12px;
+        }
+
+        h5 {
+            color: #000;
+            font-family: Poppins;
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 34px;
+            letter-spacing: -0.48px;
+            margin-bottom: 16px;
+        }
+
+        p {
+            width: 358px;
+            color: #000;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 28px;
+            letter-spacing: 0.18px;
+            opacity: 0.5;
+            margin-bottom: 24px;
+        }
+    }
+
+    &-btn {
+        display: flex;
+        gap: 8px;
+        cursor: pointer;
+
+        a {
+            color: $top-color;
+            font-family: Inter;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 600;
+            line-height: 27px;
+            letter-spacing: 0.14px;
+        }
+    }
+}
+
+//  /SERVICES SECTION
