--- a/scss/main.scss
+++ b/scss/main.scss
@@ -312,14 +312,151 @@ h2 {
         }
     }
 }
+
 //  /PROJECT SECTION
 
 // NEW PRODUCT SECTION 
-.newproduct{
-    padding-top: 141px;
+.newproduct {
+    padding-top: 180px;
     padding-bottom: 184px;
     background-image: url(../images/product__bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 100vh;
+
+    span {
+        color: $top-color;
+        font-family: Poppins;
+        font-size: 20px;
+        font-weight: 600;
+        line-height: normal;
+        letter-spacing: -0.4px;
+        text-transform: capitalize;
+        margin-bottom: 16px;
+    }
+
+    p {
+        font-family: Inter;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
+        letter-spacing: 0.18px;
+        text-transform: capitalize;
+        opacity: 0.5;
+        width: 645px;
+        margin-bottom: 32px;
+    }
+
+    h6 {
+        font-family: Raleway;
+        font-size: 18px;
+        font-weight: 500;
+        line-height: normal;
+        letter-spacing: 0.18px;
+        margin-bottom: 16px;
+    }
+
+    .circles {
+        margin-bottom: 72px;
+
+        svg {
+            margin-right: 10px;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+
+    .newproduct__btn {
+        background-color: $top-color;
+        display: flex;
+        padding: 12px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 5px;
+        width: 168px;
+        cursor: pointer;
+        border-radius: 4px;
+
+        button {
+            background-color: transparent;
+            border: none;
+            color: #FFF;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: normal;
+            letter-spacing: -0.18px;
+        }
+    }
 }
+
 //  /NEW PRODUCT SECTION 
+
+// TESTIMONIALS SECTION
+.testimonial {
+    padding-top: 160px;
+    padding-bottom: 160px;
+
+    h2 {
+        margin-bottom: 67px;
+    }
+
+    &__items {
+        display: flex;
+    }
+
+    &-item {
+        display: flex;
+        margin-right: 48px;
+        border-radius: 16px;
+        background: #FAF8F4;
+        padding: 48px 62px 48px 48px;
+
+        &:last-child {
+            margin-right: 0;
+        }
+
+        img {
+            margin-right: 47px;
+        }
+
+        svg {
+            margin-bottom: 16px;
+        }
+
+        h5 {
+            color: #0F3141;
+            font-family: Poppins;
+            font-size: 24px;
+            font-weight: 600;
+            line-height: 36px;
+            letter-spacing: -0.72px;
+            width: 395px;
+            margin-bottom: 24px;
+        }
+
+        p {
+            width: 391px;
+            color: #78756E;
+            font-family: Inter;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 28px;
+            margin-bottom: 35px;
+        }
+
+        span {
+            color: #565554;
+            font-family: Poppins;
+            font-size: 18px;
+            font-weight: 600;
+            line-height: 27px;
+            letter-spacing: -0.36px;
+            opacity: 0.7;
+        }
+    }
+}
+
+//  /TESTIMONIALS SECTION
