--- a/css/main.css
+++ b/css/main.css
@@ -387,4 +387,71 @@ h2 {
   line-height: 27px;
   letter-spacing: -0.36px;
   opacity: 0.7;
+}
+
+.contact {
+  padding-top: 142px;
+  padding-bottom: 270px;
+  background: #F5F6F8;
+}
+.contact .container {
+  display: flex;
+}
+.contact__item-first h2 {
+  width: 502px;
+  line-height: 72px;
+  margin-bottom: 24px;
+}
+.contact__item-first p {
+  width: 740px;
+  color: var(--neutral-black, #0F3141);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0.2px;
+  opacity: 0.8;
+  margin-bottom: 72px;
+}
+.contact__item-first .contact-btn {
+  border-radius: 8px;
+  background: #F17252;
+  color: #FFF;
+  padding: 16px 32px;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: -0.18px;
+  margin-right: 32px;
+}
+.contact__item-first .contact-link {
+  color: #000;
+  opacity: 0.7;
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.2px;
+  border-bottom: 1px solid #0F3141;
+}
+.contact__item-second {
+  position: relative;
+}
+.contact__item-second img {
+  position: absolute;
+  border-right: 20px solid #F5F6F8;
+  border-top: 20px solid #F5F6F8;
+}
+.contact__item-second img:last-child {
+  border: none;
+  left: 322px;
+  bottom: -270px;
+  width: 396px;
+}
+
+.footer {
+  padding-top: 64px;
+  padding-bottom: 43.5px;
+  background: #0F3141;
 }/*# sourceMappingURL=main.css.map */
