--- a/css/main.css
+++ b/css/main.css
@@ -338,6 +338,7 @@ h2 {
   font-weight: 600;
   line-height: 1;
   letter-spacing: -0.18px;
+  padding-top: 10px;
 }
 .newproduct .newproduct__btn:hover {
   background-color: transparent;
