--- a/scss/main.scss
+++ b/scss/main.scss
@@ -395,6 +395,7 @@ h2 {
             font-weight: 600;
             line-height: 1;
             letter-spacing: -0.18px;
+            padding-top: 10px;
             
         }
 
