--- a/css/main.css
+++ b/css/main.css
@@ -186,6 +186,7 @@ h2 {
 .product {
   padding-top: 160px;
   padding-bottom: 114px;
+  overflow: hidden;
 }
 .product h2 {
   margin-bottom: 72px;
@@ -194,6 +195,9 @@ h2 {
   font-family: Raleway;
   display: flex;
   position: relative;
+  transition: transform 0.5s ease-in-out;
+  width: -moz-max-content;
+  width: max-content;
 }
 .product__item {
   margin-right: 24px;
@@ -202,6 +206,8 @@ h2 {
   font-weight: 700;
   line-height: 28px;
   letter-spacing: 0.18px;
+  flex: 0 0 15%;
+  box-sizing: border-box;
 }
 .product__item:last-child {
   margin-right: 0;
